tests/adders/adder_d1/expects/add_incorrect.interp.expect
error: Thread 0 (`add_incorrect`) attempted conflicting assignment to 'b': current=5, new=2
   ┌─ tests/adders/adder_d1/add_d1.prot:35:3
   │
35 │   DUT.b := b;
   │   ^^^^^^^^^^^ Thread 0 (`add_incorrect`) attempted conflicting assignment to 'b': current=5, new=2

error: Thread 1 (`add_incorrect`) attempted conflicting assignment to 'b': current=2, new=5
   ┌─ tests/adders/adder_d1/add_d1.prot:32:3
   │
32 │   DUT.b := b;
   │   ^^^^^^^^^^^ Thread 1 (`add_incorrect`) attempted conflicting assignment to 'b': current=2, new=5

Trace 0 execution failed.
---CODE---
101
